# qpmad_sqp

./: .gitmodules  CMakeLists.txt  Makefile  README.md
cmake/: ariles_add_external_git_project.cmake
include/sqp/: objective.h  objective_ad.h  solver.h  solver_parameters.h  utils.h
tests/: CMakeLists.txt  generic.cpp  paraboloid.cpp  sine.cpp  test_base.h
